Restore custom codec.

Document QTextCodec behavior in regard to registration.  Move the creatation of UTF8BOMCodec to main.cpp.
Was originally inside the options dialog creation .

BUG:439365
FIXED-IN:1.9.3
(cherry picked from commit ac8b825c7b51297650a5b149f7280fe0f6ee916d)