src/SourceData.cpp
@@ -792,7 +792,8 @@ QTextCodec* SourceData::detectEncoding(const char* buf, qint64 size, qint64& ski
         if(buf[0] == '\xEF' && buf[1] == '\xBB' && buf[2] == '\xBF')
         {
             skipBytes = 3;
-            return QTextCodec::codecForName("UTF-8");
+            //Custom codec.
+            return QTextCodec::codecForName("UTF-8-BOM");
         }
     }
     skipBytes = 0;
